# ocr_weighted_levenshtein

./: CITATION.cff  README  README.md  distances.json  main.py  params_weighted_leven.json  pyproject.toml
data/weights/exponential/: delete.npy  insert.npy  subs.npy
data/weights/using_mean/: delete.npz.npy  insert.npz.npy  subs.npz.npy
src/: count_editions2distances.py  image_generator.py
src/ocr_weighted_levenhstein/data/: insert.npy  subs.npy
